# proyect-utp

./: .gitignore  BLOQUES_RESUMEN.md  CAMBIOS_HORARIO_MINIMALISTA.md  CORRECCION_CUATRIMESTRES.md  CORRECCION_IDS_BLOQUES.md  CURSOS_BASADOS_EN_PROFESSORS.md  DATOS_FINALES_CALENDARIO.md  DOCUMENTACION_CSP.md  ESTRUCTURA.md  GUIA_CSP.md  INSTRUCCIONES_CARGAR_DATOS.md  README.md  RESUMEN_INTEGRACION.md  SOLUCION_CALENDARIO_VACIO.md  SOLUCION_FINAL_CALENDARIO_LLENO.md  analizar_horario.py  check_schedule.py  clean_courses_csv.py  compile_flags.txt  diagnosticar_datos.py  diagnostico_csp.py  diagnostico_servidor.py  enrich_professors.py  excel_dump.txt  fix_professors_timeslots.py  generar_datos.py  generate_data.py  generate_timeslots.py  horario_generado.json  inspect_excel.py  inspect_excel_availability.py  limpiar_gradientes.py  probar_horario.py  remove_courses_columns.py  reproduce_issue.py  reproduce_period_error.py  requirements.txt  simplificar_horario.py  test_csp_scheduler.py  test_curriculum.py  (+6 more)
cpp_core/: CMakeLists.txt  constraints.cpp  constraints.hpp  grafo.cpp  grafo.hpp  graph.cpp  graph.hpp  planificador.cpp  planificador.hpp  restricciones.cpp  restricciones.hpp  scheduler_core.cpp  scheduler_core.hpp
datos_muestra/: bloques_tiempo.csv  bloques_tiempo.json  cursos.csv  profesores.json
frontend/: app.js  index.html  styles.css  styles_backup.css  styles_backup_minimalista.css  styles_cycle.css  visualization.css  visualization.js
instrucciones/: README.md  comandosLinux.txt
python_backend/: aplicacion.py  app.py  cargador_datos.py  courses_full.csv  (+15 more)
(+39 files in other folders)
